saved src/main/java/com/java_template/entity/prototype/EntityControllerPrototype.java: 989a05ce-6085-11b2-bae8-42ec340a0077